--- a/MoneySaver.App/MoneySaver.App.csproj
+++ b/MoneySaver.App/MoneySaver.App.csproj
@@ -6,10 +6,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Blazor.Extensions.Logging" Version="1.1.1" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="3.2.1" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Build" Version="3.2.1" PrivateAssets="all" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="3.2.1" PrivateAssets="all" />
+    <PackageReference Include="Radzen.Blazor" Version="2.16.2" />
+    <PackageReference Include="Serilog" Version="2.10.0" />
     <PackageReference Include="System.Net.Http.Json" Version="3.2.0" />
+    <!--<PackageReference Include="GridBlazor" Version="2.0.3" />-->
   </ItemGroup>
 
   <ItemGroup>
