--- a/MoneySaver.App/Properties/launchSettings.json
+++ b/MoneySaver.App/Properties/launchSettings.json
@@ -18,7 +18,7 @@
     },
     "MoneySaver.App": {
       "commandName": "Project",
-      "launchBrowser": true,
+      "launchBrowser": false,
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
