Add appsettings configuration

--- a/MoneySaver.App/wwwroot/appsettings.json
+++ b/MoneySaver.App/wwwroot/appsettings.json
@@ -10,7 +10,8 @@
     "PostLogoutRedirectUri": "/",
     "ResponseType": "code"
   },
-  "TestConfig": {
-    "MyProperty": "test"
+  "DataApi": {
+    "Url": "https://localhost:6001/",
+    "Scopes": [ "manage" ]
   }
 }
