Add commented configuration which can be used if docker containers are used for development

--- a/MoneySaver.App/nginx.conf
+++ b/MoneySaver.App/nginx.conf
@@ -2,7 +2,6 @@ events {
     worker_connections  1024;
 }
 
-
 http {
     limit_req_zone $binary_remote_addr zone=one:10m rate=10r/s;
     include       /etc/nginx/mime.types;
@@ -16,7 +15,7 @@ http {
         location / {
             root /usr/share/nginx/html;
             try_files $uri $uri/ index.html =404;
-        } 
+        }
     }
 
     server {
@@ -41,7 +40,7 @@ http {
         #add_header X-Frame-Options DENY;
         #add_header X-Content-Type-Options nosniff;
         # add_header Strict-Transport-Security "max-age=15768000; includeSubdomains; preload;";
-        # add_header Content-Security-Policy "default-src 'none'; frame-ancestors 'none'; script-src 'self'; img-src 'self'; style-src 'self'; base-uri 'self'; form-action 'self';";
+        # add_header Content-Security-Policy "default-src 'self' 'unsafe-inline' 'unsafe-eval'; frame-ancestors 'self'; script-src 'self'; img-src 'self'; style-src 'self'; base-uri 'self'; form-action 'self';";
         # add_header Referrer-Policy "no-referrer, strict-origin-when-cross-origin";
         add_header X-Frame-Options SAMEORIGIN;
         add_header X-Content-Type-Options nosniff;
