--- a/MoneySaver.App/wwwroot/appsettings.json
+++ b/MoneySaver.App/wwwroot/appsettings.json
@@ -1,5 +1,6 @@
 {
   "oidc": {
+    //"Authority": "https://app.moneyroutes.local:5001/",
     "Authority": "https://localhost:5001/",
     "ClientId": "blazor",
     "DefaultScopes": [
@@ -11,6 +12,7 @@
     "ResponseType": "code"
   },
   "DataApi": {
+    //"Url": "https://api.moneyroutes.local:6001/",
     "Url": "https://localhost:6001/",
     "Scopes": [ "manage" ]
   }
